src/test/ui/parser/issues/issue-19398.stderr
error: expected `{`, found keyword `unsafe`
  --> $DIR/issue-19398.rs:2:19
   |
LL | trait T {
   |         - while parsing this item list starting here
LL |     extern "Rust" unsafe fn foo();
   |     --------------^^^^^^
   |     |             |
   |     |             expected `{`
   |     help: `unsafe` must come before `extern "Rust"`: `unsafe extern "Rust"`
LL |
LL | }
   | - the item list ends here
   |
   = note: keyword order for functions declaration is `default`, `pub`, `const`, `async`, `unsafe`, `extern`

error: aborting due to previous error

